Added example code for the bali-document-repository project.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "bali-component-framework": "^2.5.2",
-    "bali-digital-notary": "^2.10.0"
+    "bali-digital-notary": "^2.10.0",
+    "bali-document-repository": "^2.21.0"
   }
 }
